# coursebot

./: README.md
backend/: .gitignore  catalog.json  pyproject.toml  requirements.txt  tutorial1.py  tutorial2.py
backend/app/: __init__.py  routes.py
backend/embed/: embed-catalog.py  embed-courses.py  embed-tqfr.py  search_demo.py
backend/json/: catalog.json  courses.json
backend/llm/: embed-catalog.py  embed-courses.py  embed-reqs.py  embed-tqfr.py  embeddings.py  rag.py  search_demo.py  test.py
frontend/: bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: chat-window.tsx
frontend/src/components/ui/: chat-message.tsx  chat.tsx  custom.tsx  file-preview.tsx  markdown-renderer.tsx  message-input.tsx  message-list.tsx  prompt-suggestions.tsx  typing-indicator.tsx
